force-app/main/default/objects/PublicApi_Outbound_Request__e/PublicApi_Outbound_Request__e.object-meta.xml
<CustomObject>
    <label>Public API Outbound Request</label>
    <pluralLabel>Public API Outbound Requests</pluralLabel>
    <description>Platform Event for asynchronous Public API outbound webhook delivery.</description>
</CustomObject>