force-app/main/default/objects/PublicApi_Outbound_Request__e/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>