force-app/main/default/objects/PublicApi_Outbound_Request__e/fields/Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Id__c</fullName>
    <label>Config Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>