force-app/main/default/objects/PublicApi_Outbound_Request__e/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>